Fixed to demo...

--- a/invessence/modules/web/src/main/webapp/pages/consumer/addon/cEdit.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/addon/cEdit.xhtml
@@ -5,6 +5,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
+    <div class="Container100 Responsive50">
     <div class="Container50 Responsive50">
         <div class="ContainerIndent">
             <p:panel id="inputArea" style="border: 0px">
@@ -135,6 +136,18 @@
                 </div>
             </p:panel>
         </div>
+    </div>
+
+                    <p style="font-style: italic; font-size: .8em;">
+                        This portfolio is designed for illustration purposes only. The cumulative value of the portfolio
+                        (net of fees) is based on the historical performance of the underlying securities and adjusted for changes in the asset allocation over time.
+                        It does not take in affect any tax withholdings or distributions.
+                        Past performance is no guarantee of future results. Any historical returns,
+                        expected returns, or probability projections may not reflect actual future
+                        performance. All securities involve risk and may result in loss. Not an offer,
+                        solicitation of an offer, or advice to buy or sell securities in jurisdictions
+                        where Invessence is not registered
+                    </p>
     </div>
 
 </ui:composition>
