--- a/invessence/modules/web/src/main/webapp/access-denied.xhtml
+++ b/invessence/modules/web/src/main/webapp/access-denied.xhtml
@@ -33,13 +33,15 @@
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <div class="EmptyBox50"></div>
                     <h:form>
-                    <h:graphicImage name="images/access-denied.svg" library="spark-layout" class="MarAuto MarTop20 Wid30"/>
+                    <h:graphicImage name="images/locked.png" library="spark-layout" class="MarAuto MarTop20 Wid30"/>
                     <span class="Fs40 Wid100 DispBlock red">Access Denied</span>
                     <span class="Wid100 DispBlock Fs30 red">Please Check Your Permissions !</span><br/>
                     <span class="Wid100 DispBlock Fs18 red">Sorry, but you have no access to this page.<br/>
                     </span>
                     <div class="EmptyBox30"></div>
-                    <p:commandButton type="submit" value="OK" styleClass="Fs16 RedButton" href="/login.xhtml"/>
+                    <h:commandButton styleClass="Fs16 RedButton"
+                                      type="submit" value="OK"
+                                      action="#{menu.redirectStartPage}"/>
                     </h:form>
                     <div class="EmptyBox50"></div>
                 </div>
