--- a/invessence/modules/web/src/main/webapp/pages/consumer/addon/core0.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/addon/core0.xhtml
@@ -14,23 +14,23 @@
                         update=":ceForm:displayInfo"/>
             </p:inputText>
 
-            <div class="Wid90">Invest for</div>
-            <p:selectOneMenu id="goal" styleClass="Wid90"
-                             value="#{cepb.goal}">
-                <p:ajax listener="#{cepb.onChangeValue}"
-                        update=":ceForm:workArea, :ceForm:displayInfo, :ceForm:graphArea"/>
-                <f:selectItem itemLabel="Grow Wealth" itemValue="Growth"/>
-                <f:selectItem itemLabel="Generate Income" itemValue="Income"/>
-                <f:selectItem itemLabel="Safety" itemValue="Safety"/>
-            </p:selectOneMenu>
-
             <div class="Wid90">Account type</div>
             <p:selectBooleanButton id="accountaxable" styleClass="Wid90"
                                    value="#{cepb.accountTaxable}" onLabel="Taxable"
                                    offLabel="Non-taxable">
-                <p:ajax listener="#{cepb.onChangeValue}"
-                        update=":ceForm:workArea, :ceForm:displayInfo, :ceForm:graphArea"/>
+                <p:ajax listener="#{cepb.onTaxStrategy}"
+                        update=":ceForm:workArea, :ceForm:displayInfo, :ceForm:graphArea, :ceForm:pTabView:basket"/>
             </p:selectBooleanButton>
+
+            <div class="Wid90">Invest for</div>
+            <p:selectOneMenu id="basket" styleClass="Wid90"
+                             value="#{cepb.basket}" >
+                <p:ajax listener="#{cepb.selectedActionBasket}"
+                        update=":ceForm:workArea, :ceForm:displayInfo, :ceForm:graphArea"/>
+                <f:selectItems value="#{cepb.advisorBasket.entrySet()}"
+                               var="bskt" itemLabel="#{bskt.value}" itemValue="#{bskt.key}"/>
+            </p:selectOneMenu>
+
 
             <div class="Wid90">Your current age</div>
             <p:spinner id="age" value="#{cepb.age}" styleClass="Wid90"
